# dante

./: .gitignore  README.md
dante-apk/: build.gradle  settings.gradle
dante-apk/app/: build.gradle  proguard-rules.pro
dante-apk/app/src/main/: AndroidManifest.xml
dante-apk/app/src/main/assets/i18n/: tr.json
dante-apk/app/src/main/res/drawable/: ic_about.xml  ic_settings.xml  ic_statistics.xml
dante-apk/app/src/main/res/layout/: activity_main.xml  dt_about.xml  floating_view.xml  settings_object_singlebutton.xml  text_settings_object.xml  transparent_menu.xml
dante-apk/app/src/main/res/menu/: menu_main.xml
dante-apk/app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  themes.xml
dante-apk/app/src/main/res/values-night/: themes.xml
dante-apk/app/src/main/res/values-v23/: themes.xml
dante-apk/app/src/main/res/xml/: colors.xml  styles.xml
dante-apk/easysettings-basic/: build.gradle
dante-apk/easysettings-dialogs/: build.gradle
dante-apk/floatingview/: build.gradle
dante-apk/gradle/wrapper/: gradle-wrapper.properties
dante-apk/material-dialogs-core/: build.gradle
dante-rust/: .gitignore  Cargo.toml  build.rs  setup.sh
dante-rust/dobby-rs/: Cargo.toml
dante-rust/dobby-sys/: build.rs
dante-rust/src/: bd.rs  egui_android_backend.rs  fake_libmain.rs  game_hook.rs  il2cpp_stuff.rs  imgui_android_backend.rs  imgui_menu.rs  imgui_opengl3_loader.rs  jni_hooks.rs  lib.rs  my_plt_hook.rs  opengl_hooks.rs  settings.rs  utils.rs  vulkan_hooks.rs
dante-rust/src/knight_unity/: common.rs  krecv.rs  ksend.rs  mod.rs
(+48 files in other folders)
