[package]
name = "dante"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dante"
crate-type = ["cdylib"]


[build]
rustflags=["-fno-exceptions","-fno-rtti"]

[dependencies]
jni = { version = "0.21.1", default-features = false, features = ["invocation"]}
binrw = "0.13.3"
dobby-rs = { path = "./dobby-rs" }
libc = "0.2.137"
# utilities
libloading = "0.7"
proc-maps = "0.3.0"
android_logger = "0.13.3"
log = "0.4.20"
ctor = "0.2.6"
pretty-hex = "0.4.1"
plt-rs = "0.1.0"
ndk = "0.8.0"
rust-crypto = "0.2.36"
derive_builder = "0.13.0"
egl = "0.2.7"

glow = "0.13.1"
egui_glow = "0.26.1"

egui = "0.26.1"
lazy_static = "1.4.0"
goldberg = "0.1.0"
rand = "0.8.5"

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
backtrace = "0.3.69"
tracing-android = "0.2.0"

[features]
vulkan = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1

